# EVAA

./: .clang-format  .clang-tidy.in  .gitignore  .travis.yml  CMakeLists.txt  ClangTidyReport.html  Doxyfile  README.md  _auxiliary_functions_8cpp.html  _auxiliary_functions_8cpp__incl.map  _auxiliary_functions_8cpp__incl.md5  _auxiliary_functions_8h.html  _auxiliary_functions_8h__dep__incl.map  _auxiliary_functions_8h__dep__incl.md5  _auxiliary_functions_8h__incl.map  _auxiliary_functions_8h__incl.md5  _auxiliary_functions_8h_source.html  _auxiliary_parameters_8cpp.html  _auxiliary_parameters_8cpp__incl.map  _auxiliary_parameters_8cpp__incl.md5  _auxiliary_parameters_8h.html  _auxiliary_parameters_8h__dep__incl.map  _auxiliary_parameters_8h__dep__incl.md5  _auxiliary_parameters_8h__incl.map  _auxiliary_parameters_8h__incl.md5  _auxiliary_parameters_8h_source.html  _c_make_lists_8txt.html  _c_make_lists_8txt_a90a73f2a482fa97064ec367e671911c3_icgraph.map  _c_make_lists_8txt_a90a73f2a482fa97064ec367e671911c3_icgraph.md5  _e_v_a_a_compute_engine_8cpp.html  _e_v_a_a_compute_engine_8cpp__incl.map  _e_v_a_a_compute_engine_8cpp__incl.md5  _e_v_a_a_compute_engine_8h.html  _e_v_a_a_compute_engine_8h__dep__incl.map  _e_v_a_a_compute_engine_8h__dep__incl.md5  _e_v_a_a_compute_engine_8h__incl.map  _e_v_a_a_compute_engine_8h__incl.md5  _e_v_a_a_compute_engine_8h_source.html  _input_schema_e_v_a_a_8cpp.html  _input_schema_e_v_a_a_8cpp__incl.map  (+199 more)
.github/workflows/: buildAndUnitTest.yml  buildDoc.yml  buildDocumentation.yml  buildDoxygenDocumentation.yml  buildLaTeXDocumentation.yml  cmake.yml  lintingAndStaticAnalysis.yml
ClangTidyReport/: ClangTidyReport.html
Results/MBD_Matlab/: ConditionJacobi-BDF2-100sec-dt_0.001-exectime385.7-tolerance_1e-7.fig  ConditionJacobi-CN-100sec-dt_0.001-exectime230.7-tolerance_1e-6.fig  ConditionJacobi-CN-100sec-dt_0.001-exectime257.4-tolerance_1e-7.fig  ConditionJacobi-CN-100sec-dt_0.001-exectime448.0-tolerance_1e-8.fig  NumIter-BDF2-100sec-dt_0.001-exectime385.7-tolerance_1e-7.fig  NumIter-BDF2-100sec-dt_0.001-exectime448.4-tolerance_1e-8.fig  NumIter-CN-100sec-dt_0.001-exectime230.7-tolerance_1e-6.fig  (+12 more)
benchmarkTests/: BenchMBDALE.cpp  CMakeLists.txt  benchmarkTestsMain.cpp  winResourcesBenchmarkTest.rc
benchmarkTests/compareMethods/: BenchMBDALE.cpp  CMakeLists.txt
benchmarkTests/timeIntegration/: Bench11x11BackwardEulerLinear.cpp  Bench3x3BackwardEulerLinear.cpp  CMakeLists.txt
benchmarkTests/tools/: CMakeLists.txt  dummy.cpp
bin64/: .gitignore  TestOutput.hdf5write 3  TestStringTestOutput.hdf5  write 3TestOutput.hdf5
conan/: conanfile.txt
doc/: Doxyfile
docs/: index.md
gnuPlotScripts/: gridInterpolationPlot.p
inputFiles/: CarConstantStiffness.xml  CarWithInterpolation.xml  LoadArbitraryCar.xml  LoadCircularCar.xml  LoadStraightCar.xml  SimulationParameters.xml  SimulationParametersBDF2.xml  SimulationParametersBE.xml  SimulationParametersCN.xml  car - Copy.xml  car.xml  inputFileLinear.xml  load.xml  lookup.xml
integrationTests/: compareCSV.py  compareToReference.robot
interfaces/: CMakeLists.txt
interfaces/matlab/: CMakeLists.txt  MatlabInterface.cpp
mathematica/: derivative11DOFK.nb  derivative2DOFSystemEquilibrium.nb
output/: alePlotter.m  calculateCorners.m  calculateCornersMBD.m  calculateQuaternions.m  compareALEMBD.m  mbdPlotter.m  plotPhysicalRoad.m  smallAngleApproxMatrix.m  template_fancy_plots.m  visualizer3D.m
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  defines_0.js  defines_1.js  files_0.js  files_1.js  files_2.js  (+62 more)
src/: 11DOF.h  ALE.h  Ale.h  ArbitraryTrajectory.h  CMakeLists.txt  Car.h  Constants.h  EVAAComputeEngine.cpp  EVAAComputeEngine.h  EVAAComputeStiffness.cpp  EVAAComputeStiffness.h  EVAALookup.cpp  EVAALookup.h  EVAAMainWindow.cpp  EVAAMainWindow.h  LoadModule.h  Load_module.cpp  Load_module.h  MBDMethod.cpp  MBDMethod.h  MBD_method.cpp  MBD_method.h  MetaDataBase.cpp  MetaDataBase.h  MetaDatabase.h  Profile_class.cpp  Profile_class.h  ReadXML.cpp  ReadXML.h  RoadProfile.h  arbitraryTrajectory.h  car.h  main.cpp  resources.qrc  winResources.rc
src/BLAS/: BLAS.h  CMakeLists.txt
src/IO/: Output.cpp  Output.h  OutputHDF5.cpp  OutputHDF5.h  outputhdf5.cpp  outputhdf5.h
src/database/: CMakeLists.txt
src/inputOutput/: CMakeLists.txt  Message.cpp  Message.h
src/math/: MKLRoutines.cpp  MKLRoutines.h  Math.cpp  Math.h  MathLibrary.cpp  MathLibrary.h
src/renderEngine/: CMakeLists.txt  CommandModel.cpp  CommandModel.h  CommandModelAdd.cpp  CommandModelAdd.h  CommandModelTranslate.cpp  CommandModelTranslate.h  Model.cpp  Model.h  ProcessingEngine.cpp  ProcessingEngine.h  QVTKFramebufferObjectItem.cpp  QVTKFramebufferObjectItem.h  QVTKFramebufferObjectRenderer.cpp  QVTKFramebufferObjectRenderer.h
src/resources/: EVAAMainWindow.qml
src/tools/: .gitignore  AuxiliaryFunctions.cpp  AuxiliaryFunctions.h  AuxiliaryParameters.cpp.in  AuxiliaryParameters.h  CMakeLists.txt  MathLibrary.cpp  MathLibrary.h  MemWatcher.cpp  MemWatcher.h  Timer.cpp  Timer.h
src/xsd/: CMakeLists.txt  IP_EVAA_XML.cxx  IP_EVAA_XML.hxx  IP_EVAA_XML.xsd
testUnit/: CMakeLists.txt  testEVAA.cpp
unitTests/: CMakeLists.txt  unitTestsMain.cpp
unitTests/helper/: CMakeLists.txt  CSVReader.h
unitTests/inputOutput/: CMakeLists.txt  xmlParserTest.cpp
unitTests/output/: TestOutputHDF.cpp  TestOutputHDF5.cpp  outputhdf5test.cpp
unitTests/refCSV/: Newton11DOF_lookup_noDamping_dt_1e-3_tol_1e-8.txt
unitTests/testXML/: car_TwoTrackTest.xml  load_TwoTrackTest.xml
unitTests/tools/: CMakeLists.txt  Test11TwoTrackModel.cpp  TestMathLibrary.cpp  factorialTest.cpp
xsd/: CMakeLists.txt  IP_EVAA_XML.xsd  InputSchemaEVAA.xsd  LOAD_EVAA_XML.xsd  LOOKUP_EVAA_XML.xsd  VEHICLE_EVAA_XML.xsd
(+192 files in other folders)
