#------------------------------------------------------------------------------------#
get_property(EVAA_INCLUDES GLOBAL PROPERTY EVAA_INCLUDES)
#------------------------------------------------------------------------------------#
add_subdirectory(matlab)
#------------------------------------------------------------------------------------#